// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: default 1`] = `
{
  "config": {
    "description": "Standard improve pass — reflect, distill, consolidate, memory inference, graph extraction, and validation; improve-stage extract and proactive maintenance off.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": true,
      },
      "memoryInference": {
        "enabled": true,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": false,
        "maxPerRun": 15,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "workflow",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": false,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": true,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "default",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: quick 1`] = `
{
  "config": {
    "description": "Reflect-only pass — no extract, distill, consolidate, memoryInference, or graphExtraction.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": false,
      },
      "memoryInference": {
        "enabled": false,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": false,
        "maxPerRun": 15,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "workflow",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": false,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": false,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "quick",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: thorough 1`] = `
{
  "config": {
    "description": "Like default, plus the triage process (drains the pending-proposal backlog).",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": true,
      },
      "memoryInference": {
        "enabled": true,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": false,
        "maxPerRun": 15,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "workflow",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": true,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": true,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "thorough",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: memory-focus 1`] = `
{
  "config": {
    "description": "Memory and lesson improvement only — no distill, consolidate, or graphExtraction.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": false,
      },
      "memoryInference": {
        "enabled": true,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": false,
        "maxPerRun": 15,
      },
      "reflect": {
        "allowedTypes": [
          "memory",
          "lesson",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": false,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": false,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "memory-focus",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: graph-refresh 1`] = `
{
  "config": {
    "description": "Full-corpus graph extraction pass — rebuilds graph relationships across all stash files. Disables all other sub-processes. Use via \`akm improve --strategy graph-refresh\` or the embedded \`graph-refresh-weekly\` task.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": true,
        "fullScan": true,
      },
      "memoryInference": {
        "enabled": false,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": false,
        "maxPerRun": 15,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "workflow",
        ],
        "enabled": false,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": false,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": false,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "graph-refresh",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: frequent 1`] = `
{
  "config": {
    "description": "Frequent inference pass — memory inference, graph extraction, and reflect; improve-stage extract off.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "minNewSessions": 3,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": true,
      },
      "memoryInference": {
        "enabled": true,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": false,
        "maxPerRun": 15,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "workflow",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": false,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": false,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "frequent",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: consolidate 1`] = `
{
  "config": {
    "description": "Consolidation-only pass — merges, deduplicates, and prunes memories every 4h.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "maxChunkSize": 25,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": false,
      },
      "memoryInference": {
        "enabled": false,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": false,
        "maxPerRun": 15,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "workflow",
        ],
        "enabled": false,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": false,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": false,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "consolidate",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: catchup 1`] = `
{
  "config": {
    "description": "Manual catch-up — consolidation + triage drain with no interval minimum.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "maxChunkSize": 50,
        "minPoolSize": 0,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": false,
      },
      "memoryInference": {
        "enabled": false,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": false,
        "maxPerRun": 15,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "workflow",
        ],
        "enabled": false,
        "limit": 25,
      },
      "triage": {
        "applyMode": "queue",
        "enabled": true,
        "maxAcceptsPerRun": 100,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": false,
      },
    },
    "sync": {
      "enabled": true,
      "push": true,
    },
  },
  "name": "catchup",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: reflect-distill 1`] = `
{
  "config": {
    "description": "Reflect + distill pass — reflect, distill, memoryInference, and proposal triage (promote); proactiveMaintenance/consolidate/graphExtraction/extract off. Sync disabled: an interrupted run would otherwise leave an uncommitted backlog.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "minNewSessions": 1,
        "timeoutMs": 300000,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": false,
      },
      "memoryInference": {
        "enabled": true,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": false,
        "maxPerRun": 15,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "workflow",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "promote",
        "enabled": true,
        "judgment": {},
        "maxAcceptsPerRun": 15,
        "maxDiffLines": 200,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": false,
      },
    },
    "sync": {
      "enabled": false,
      "push": true,
    },
  },
  "name": "reflect-distill",
}
`;

exports[`default improve strategies (#552) complete resolved trees are pinned for all built-ins: proactive-maintenance 1`] = `
{
  "config": {
    "description": "Opt-in proactive-maintenance pass — reflect, distill, proposal triage (promote, high budget), and the proactive-maintenance lane (maxPerRun 100); consolidate/memoryInference/graphExtraction/extract off. Sync disabled: an interrupted run would otherwise leave an uncommitted backlog.",
    "processes": {
      "consolidate": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": false,
        "minPoolSize": 500,
      },
      "distill": {
        "allowedTypes": [
          "memory",
        ],
        "enabled": true,
        "requirePlannedRefs": true,
      },
      "extract": {
        "enabled": false,
        "triage": {
          "enabled": true,
          "minScore": 2,
        },
      },
      "graphExtraction": {
        "enabled": false,
      },
      "memoryInference": {
        "enabled": false,
      },
      "proactiveMaintenance": {
        "dueDays": 30,
        "enabled": true,
        "maxPerRun": 100,
      },
      "reflect": {
        "allowedTypes": [
          "agent",
          "command",
          "knowledge",
          "lesson",
          "memory",
          "skill",
          "workflow",
        ],
        "enabled": true,
        "limit": 25,
      },
      "triage": {
        "applyMode": "promote",
        "enabled": true,
        "judgment": {},
        "maxAcceptsPerRun": 100,
        "maxDiffLines": 200,
        "policy": "personal-stash",
      },
      "validation": {
        "enabled": false,
      },
    },
    "sync": {
      "enabled": false,
      "push": true,
    },
  },
  "name": "proactive-maintenance",
}
`;
